[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/character_sprites/faces/0.png" type="Texture" id=1]
[ext_resource path="res://Character Bubble.gd" type="Script" id=2]
[ext_resource path="res://UI/Score.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/character_sprites/hair/0.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 48.6621

[node name="Character Bubble" type="Node2D"]
script = ExtResource( 2 )

[node name="face" type="Sprite" parent="."]
position = Vector2( 0.3, 2.09999 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="hair" type="Sprite" parent="."]
position = Vector2( 0.3, -17.9 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Score" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -117, 1 )
scale = Vector2( 1.1, 1.1 )

[node name="PopupDialog" parent="Score/Button" index="2"]
margin_left = -620.0
margin_top = -300.0
margin_right = -44.0
margin_bottom = 180.0
rect_scale = Vector2( 1.3, 1.3 )
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]

[editable path="Score"]
